--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend Stage 2 task",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
